# MigrateOS

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  render-keepalive.yml
apps/frontend/: .prettierignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/app/dashboard/: loading.tsx  page.tsx
apps/frontend/app/faq/: page.tsx
apps/frontend/app/repository-intelligence/: page.tsx
apps/frontend/app/security/: page.tsx
apps/frontend/app/workflow/: page.tsx
apps/frontend/components/: theme-provider.test.tsx  theme-provider.tsx
apps/frontend/components/auth/: auth-provider.tsx  workspace-gate.tsx
apps/frontend/components/brand/: migrateos-mark.tsx
apps/frontend/components/navigation/: marketing-nav.tsx  sidebar.tsx  top-nav.tsx
apps/frontend/components/ui/: agent-card.tsx  animated-counter.tsx  glass-panel.test.tsx  glass-panel.tsx  skeleton.tsx  stat-card.tsx  status.tsx  streaming-log-panel.tsx  toast.tsx
apps/frontend/features/dashboard/: dashboard-data.ts  dashboard-overview.tsx  live-dashboard.tsx
apps/frontend/features/jobs/: job-workspace.tsx
apps/frontend/features/landing/: coding-club-stage.tsx  ecosystem-stage.tsx  landing-experience.tsx
apps/frontend/lib/: config.ts  platform-api.ts
backend/: __init__.py  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260717_0001_initial_control_plane.py  20260717_0002_live_workflow.py  20260717_0003_pin_job_snapshots.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  schemas.py
backend/app/application/: __init__.py  ports.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/domain/: __init__.py  enums.py
backend/app/infrastructure/: __init__.py
backend/app/prompts/: planning.md  risk_analysis.md
backend/app/services/: live_events.py  workflow.py
backend/tests/: test_auth.py  test_health.py  test_repository_intelligence.py  test_workflow.py
docker/: Dockerfile.api
docs/: AI_Agents.md  API.md  Architecture.md  Contributing.md  Database.md  Deployment.md  Folder_Structure.md  Frontend_Design.md  Milestone_5_Handoff.md  Milestone_Plan.md  PRD.md  Roadmap.md  Technical_Design.md
docs/decisions/: ADR-0001-modular-monolith-and-workers.md
shared/: README.md
supabase/: archive_legacy_migrateos_schema.sql
supabase/migrations/: 20260717_0001_migrateos_planning_schema.sql  20260717_0002_rls_policies.sql
workers/: __init__.py  celery_app.py  tasks.py
(+31 files in other folders)
