[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "migrateos"
version = "0.1.0"
description = "AI-powered software modernization platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic==1.16.5",
  "celery[redis]==5.5.3",
  "fastapi==0.116.1",
  "GitPython==3.1.45",
  "psycopg[binary]==3.2.13",
  "pydantic-settings==2.10.1",
  "redis==5.2.1",
  "sqlalchemy==2.0.43",
  "structlog==25.4.0",
  "tree-sitter==0.25.0",
  "tree-sitter-python==0.23.6",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "httpx==0.28.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.9",
]

[tool.setuptools.packages.find]
include = ["backend*", "workers*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["backend/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "workers/tests"]
addopts = "-q --strict-markers"
